# vox

./: .actrc  .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md  SKILL.md  build.rs  setup.sh
.cargo/: config.toml
.github/workflows/: act-release-test.yml  ci.yml  release.yml
benches/: audio_bench.rs  dsp_quality_bench.rs  tts_bench.rs
examples/: dsp_sweep.rs
npm/: README.md  install.js  package.json  run.js
src/: audio.rs  calibrate.rs  cli.rs  config.rs  daemon.rs  error.rs  lib.rs  main.rs  models.rs  server.rs  stt.rs  tts.rs  vad.rs
tests/: config_integration.rs
