[package]
name = "vox"
version = "0.1.0"
edition = "2024"
description = "Lightweight voice MCP server with local Whisper + Kokoro inference"
repository = "https://github.com/trvon/vox"
license = "MIT"

[dependencies]
rmcp = { version = "0.14", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
sherpa-rs = { version = "0.6", features = ["tts", "download-binaries"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
schemars = { version = "1", features = ["derive"] }
thiserror = "2"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["stream"] }
dirs = "6"
hound = "3.5"
tokio-stream = "0.1"
futures = "0.3"
tar = "0.4"
bzip2 = "0.5"
