[package]
name = "vox"
version = "0.1.0"
edition = "2024"
description = "Lightweight voice MCP server with local Moonshine + Kokoro inference"
repository = "https://github.com/trvon/vox"
license = "MIT"

[dependencies]
rmcp = { version = "0.14", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
axum = "0.8"
tokio-util = "0.7"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
sherpa-rs = { version = "0.6", features = ["tts", "download-binaries", "static"] }
sherpa-rs-sys = { version = "0.6", features = ["download-binaries", "static"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
schemars = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
thiserror = "2"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
dirs = "6"
indicatif = "0.17"
console = "0.15"
hound = "3.5"
tokio-stream = "0.1"
futures = "0.3"
tar = "0.4"
bzip2 = "0.5"
notify = "7"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
debug = 0
split-debuginfo = "off"

[profile.test]
debug = 0

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tts_bench"
harness = false

[[bench]]
name = "audio_bench"
harness = false

[[bench]]
name = "dsp_quality_bench"
harness = false
